# map_parallel

./: Cargo.toml  README.md
src/: bench.rs  lib.rs  test.rs
